sorting overlap issues with header and footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,13 +51,23 @@ li a {
     text-transform: uppercase;
 }
 
-.mobile-menu {
-    text-decoration: none;
-}
-
 a:hover {
     color: #cccccc
 }
+
+.container-fluid {
+    width:auto;
+}
+
+.bg-dark {
+    --bs-bg-opacity: 0;
+}
+
+.navbar-toggler-icon {
+    width:2em;
+    height: 2em;
+}
+
 
 /*----------------------------------------Body*/
 
@@ -76,6 +86,7 @@ footer {
     margin: 0;
     font-size: 115%;
     width: 100%;
+    padding-bottom: 30px;
 }
 
 footer h4 {
@@ -89,6 +100,10 @@ footer a {
     letter-spacing: 10px;
     font-size: 125%;
     margin-top: 20px;
+}
+
+footer a:hover {
+    color: #fca311;
 }
 
 .developer-name {
@@ -110,10 +125,21 @@ footer p {
 .btn-outline {
     border-color: #fca311;
     color: #fca311;
-    margin-top: 10px;
+    margin-top: 20px;
     text-transform: uppercase;
+}
+
+.btn-outline:hover {
+    color:#cccccc;
+    border-color: #cccccc;
 }
 
 footer h4 {
     margin-top: 15px;
+}
+
+.social-links {
+    letter-spacing: 50px;
+    font-size: 110%;
+    padding-top: 15px;
 }
